--- a/references.bib
+++ b/references.bib
@@ -4179,6 +4179,27 @@
   publisher	= {Peachpit Press}
 }
 
+@article{parsania2014,
+  title={A review: Image interpolation techniques for image scaling},
+  author={Parsania, Pankaj and Virparia, Paresh V and others},
+  journal={International Journal of Innovative Research in Computer and Communication Engineering},
+  volume={2},
+  number={12},
+  pages={7409--7414},
+  year={2014}
+}
+
+@article{chen2019,
+  title={Image scaling: how hard can it be?},
+  author={Chen, Genlang and Zhao, Huanyu and Pang, Christopher Kuo and Li, Tongliang and Pang, Chaoyi},
+  journal={IEEE Access},
+  volume={7},
+  pages={129452--129465},
+  year={2019},
+  publisher={IEEE}
+}
+
+
 @InBook{	  wills2008,
   title		= {Linked Data Views},
   booktitle	= {Handbook of data visualization},
